Adding swagger docs
